--- a/alpha-static/css/main-alpha.css
+++ b/alpha-static/css/main-alpha.css
@@ -10,12 +10,12 @@
 
 html {
   font-size: 100%; /* Set font size to user preference */
-  font-family: Arial, Helvetica, sans-serif; /* Temporary style */
+  font-family: Arial, Helvetica, sans-serif; /* Websafe */
 }
 
 body {
   width: 100%;
-  height: 100vh; /* ! May need to rework this later as it may mess with mobile by making it scroll when we don't want it */
+  height: 100vh; /* ! May need to rework this later, height 100% does not work properly */
   background-color: #fff;
 }
 
@@ -69,18 +69,37 @@ main {
   align-items: center;
 }
 
-#instructions {
-  height: 14.25rem;
-  width: 49.375rem;
+.box-gray {
   background-color: var(--gray-bg-color, lightgrey); 
   display: flex;
   align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  text-align: center;
+}
+
+.box-gray * {
+  margin: 0;
+  text-align: center;
+}
+
+#instructions {
+  width: 49.375rem;
 }
 
 #instructions > p {
   font-size: 2.75rem;
   line-height: 2;
-  text-align: center;
+}
+
+#code {
+  width: 40rem;
+  margin: 10rem 0 5rem;
+}
+
+#code > p {
+  font-size: 4.5rem;
+  font-weight: bold;
 }
 
 button {
@@ -95,4 +114,36 @@ button {
   background-color: var(--gray-bg-color, lightgrey);
   font-size: 2.75rem;
   margin: 3rem 0;
+}
+
+#connected-players {
+  max-width: 90%;
+  height: 12.5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.player {
+  width: 8rem;
+  margin: 0 1rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pl-avi {
+  content: "";
+  display: block;
+  width: 6.25rem;
+  height: 6.25rem;
+  background-color: #000;
+  margin-bottom: .25rem;
+  border-radius: 50%;
+}
+
+.pl-name {
+  font-weight: bold;
 }
