--- a/alpha-static/css/main-alpha.css
+++ b/alpha-static/css/main-alpha.css
@@ -190,3 +190,13 @@ button {
 .pl-name {
   font-weight: bold;
 }
+
+#code-fixed {
+  position: absolute;
+  right: .5rem;
+  bottom: .5rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+}
