--- a/alpha-static/css/main-alpha.css
+++ b/alpha-static/css/main-alpha.css
@@ -18,6 +18,7 @@
   --pl-teal: #62EDE5;
   --pl-lime: #DAEB70;
   --pl-violet: #6F4FED;
+  --thunk-pink: #ED1968;
 }
 
 html {
@@ -84,6 +85,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 3rem;
 }
 
 .box-gray {
@@ -109,9 +111,9 @@ main {
   line-height: 2;
 }
 
-#code {
-  width: 40rem;
-  margin: 3rem 0;
+#code, #prompt {
+  min-width: 40rem;
+  max-width: 60rem;
 }
 
 #code > p {
@@ -199,4 +201,30 @@ button {
   font-weight: bold;
   display: flex;
   flex-direction: column;
+}
+
+#prompt-instructions > h3, #switch-up > h3 {
+  font-size: 3rem;
+  font-weight: bold;
+  margin: 2rem 0 .5rem;
+  text-transform: uppercase;
+}
+
+#prompt-instructions > p, #switch-up > p {
+  font-size: 1.5rem;
+}
+
+#timer {
+  width: 80%;
+  max-width: 60rem;
+  height: 3rem;
+  position: absolute;
+  bottom: .5rem;
+  padding: 0;
+}
+
+#timer-bar {
+  height: 100%;
+  width: 100%;
+  background-color: var(--thunk-pink, pink);
 }
