--- a/alpha-static/css/main-alpha.css
+++ b/alpha-static/css/main-alpha.css
@@ -6,6 +6,7 @@
 
 :root {
   --gray-bg-color: #F1F1F1;
+  --dark-gray: #333;
   --pl-red: #EB5757;
   --pl-orange: #F2994A;
   --pl-yellow: #F2C94C;
@@ -80,12 +81,13 @@ h3 {
 }
 
 main {
+  --main-padding: 3rem;
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 3rem;
+  padding-top: var(--main-padding);
 }
 
 .box-gray {
@@ -155,10 +157,11 @@ button {
 }
 
 .pl-avi {
+  --avi-size: 5.25rem;
   content: "";
   display: block;
-  width: 5.25rem;
-  height: 5.25rem;
+  width: var(--avi-size);
+  height:var(--avi-size);
   background-color: #000;
   margin-bottom: .25rem;
   border-radius: 50%;
@@ -193,6 +196,23 @@ button {
 
 .pl-name {
   font-weight: bold;
+}
+
+#top-player {
+  margin: 3rem 0;
+}
+
+#top-player .player {
+  width: 12rem;
+}
+
+#top-player .pl-avi {
+  width: 8rem;
+  height: 8rem;
+}
+
+#top-player .pl-name {
+  font-size: 2rem;
 }
 
 #code-fixed {
@@ -239,4 +259,122 @@ button {
   grid-gap: 1rem;
   margin-top: 3rem;
   align-items: center;
+}
+
+#top-answer h2 {
+  font-size: 4rem;
+}
+
+#standings {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin-top: 2rem;
+  list-style: none;
+  counter-reset: thunk-counter;
+}
+
+#standings > li {
+  margin-bottom: 1rem;
+  counter-increment: thunk-counter;
+  position: relative;
+  margin-left: 1.5rem;
+}
+
+#standings > li::before {
+  content: counter(thunk-counter);
+  color: #fff;
+  font-size: 1.25rem;
+  font-weight: bold;
+  position: absolute;
+  --counter-size: 1.75rem;
+  left: calc(-1 * var(--counter-size) + .5rem);
+  line-height: var(--counter-size);
+  width: var(--counter-size);
+  height: var(--counter-size);
+  top: calc(50% - var(--counter-size)/2);
+  background: var(--dark-gray);
+  border-radius: 50%;
+  text-align: center;
+}
+
+#standings .player {
+  display: grid;
+  grid-template-columns: 5.25rem auto;
+  grid-template-rows: 2.25rem auto;
+  grid-template-areas: 
+    "pl-avi pl-name"
+    "pl-avi pl-score";
+  width: 16rem;
+  grid-gap: 0.5rem;
+  align-items: unset;
+}
+
+#standings .pl-avi {
+  grid-area: pl-avi;
+  margin-bottom: 0;
+}
+
+#standings .pl-name {
+  margin-top: .5rem;
+  font-size: 1.5rem;
+}
+
+#standings .pl-score {
+  font-size: 1.25rem;
+}
+
+#pl-winner {
+  margin-top: 10rem;
+  /* justify-self: center does not work for flex, find solution to vertically center */
+}
+
+#pl-winner .player {
+  width: 40rem;
+}
+
+#pl-winner .pl-avi {
+  --winner-avi-size: 16rem;
+  width: var(--winner-avi-size);
+  height: var(--winner-avi-size);
+}
+
+#pl-winner .pl-name {
+  font-size: 3rem;
+}
+
+#credits {
+  flex-direction: row;
+}
+
+#game-cred, #replay {
+  width: 50%;
+  height: calc(100% + var(--main-padding));
+  margin-top: calc(-1 * var(--main-padding));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#game-cred {
+  background: var(--gray-bg-color);
+}
+
+#game-cred h3, #game-cred section {
+  margin: 1rem;
+}
+
+.team-member {
+  display: grid;
+  grid-template-columns: 7rem 15rem;
+  grid-gap: 1rem .5rem;
+}
+
+.tm-name {
+  text-align: right;
+  font-weight: bold;
+}
+
+.tm-role {
+  list-style: none;
 }
