🐛 Fix IDs on Nickname form Els

--- a/views/index.njk
+++ b/views/index.njk
@@ -48,10 +48,10 @@
 		<div class="nickname-form component" hidden>
 			<form action="">
 				<div class="input-wrap">
-					<label for="rm-code">
-					<h2>Room Code</h2>
+					<label for="nickname">
+					<h2>Nickname</h2>
 					</label>
-					<input type="text" name="rm-code" id="rm-code">
+					<input type="text" name="nickname" id="nickname">
 				</div>
 			</form>
 		</div>
