--- a/public/main.css
+++ b/public/main.css
@@ -23,6 +23,28 @@
     --thunk-pink: #ED1968;
 }
 
+.advance-to-form {
+    position:absolute;
+    top:100vh; right: 0;
+    transform:translateY(-100%);
+}
+
+#at-debug-form {
+    display: none;
+}
+
+#at-submit-btn {
+    font-size: 1.5rem;
+    margin: 0 1rem;
+    padding: 1rem 1.5rem;
+}
+
+#at-plus-btn {
+    font-size: 1.5rem;
+    margin: 0;
+    padding: 1rem 1.5rem;
+}
+
 html {
     font-size: 100%;
     /* Set font size to user preference */
