--- a/public/main.css
+++ b/public/main.css
@@ -23,23 +23,23 @@
     --thunk-pink: #ED1968;
 }
 
-.advance-to-form {
+.debug-nav-container {
     position:absolute;
     top:100vh; right: 0;
     transform:translateY(-100%);
 }
 
-#at-debug-form {
+.debug-nav {
     display: none;
 }
 
-#at-submit-btn {
+.debug-nav .submit-button {
     font-size: 1.5rem;
     margin: 0 1rem;
     padding: 1rem 1.5rem;
 }
 
-#at-plus-btn {
+.debug-nav-container .plus-button {
     font-size: 1.5rem;
     margin: 0;
     padding: 1rem 1.5rem;
