--- a/views/join.njk
+++ b/views/join.njk
@@ -7,10 +7,10 @@
 <main>
 	<header class="title">
 		<!-- current page title or system prompt/feedback -->
-		<div class="brand-mark component">
+		<div class="brand-mark">
 			<!-- for use on landing and room join -->
 		</div>
-		<div class="game-title no-outline component">
+		<div class="game-title no-outline">
 			<!-- in the case of the pink box, this would be class="outline" -->
 			<h1>Welcome</h1>
             <span class="subtitle">Please enter a room code</span>
@@ -20,7 +20,7 @@
 	</header>
 	<section class="primary">
 		<!-- description of main header, or forms/primary interactions -->
-		<div class="room-code-form component">
+		<div class="room-code-form">
 			<form action="">
 				<div class="input-wrap">
 					<input type="text" name="rm-code" id="rm-code">
@@ -30,7 +30,7 @@
 	</section>
 	<section class="cta">
 		<!-- if the primary section is a description, calls to action go here -->
-		<div class="submit-room-code component">
+		<div class="submit-room-code">
 			<button data-socket-emit="submit room code">Join Room</button>
 		</div>
 		{# A form used for directing oneself between all the views of the program. Used for debugging. DELETE BEFORE FINAL (MARCH) COMMIT! #}
