--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -16,20 +16,33 @@
 	<script>
 		document.addEventListener('DOMContentLoaded', function () {
 
-			socket = io();
-			let ctaButtons = document.querySelectorAll('section.cta button');
+			// this is our global variable
+			thunkidm = {
+				global: true, // this doesn't serve any purpose
+				socket: null,
+				ctaButtons: null
+			};
 
-			for (let button of ctaButtons) {
-				button.addEventListener('click', (e) => {
-					socket.emit(button.dataset.socketEmit);
-					// this reads the data-socket-emit attribute and sends
-					// its value as a socket event to the server
-				})
+			thunkidm.socket = io();
+			thunkidm.ctaButtons = document.querySelectorAll('section.cta button');
+			let form = document.querySelector('form');
+
+			let handleFormSubmit = (__form, __eventCode) => {
+				let formDataEntries = Object.fromEntries(new FormData(__form).entries());
+				thunkidm.socket.emit(__eventCode, formDataEntries);
 			}
 
-			socket.on('test', (data) => {
-				console.log(data);
-			})
+			for (let button of thunkidm.ctaButtons) {
+				button.addEventListener('click', (e) => {
+					handleFormSubmit(form, button.dataset.socketEmit);
+				});
+			}
+
+			form.addEventListener('submit', (e) => {
+				e.preventDefault();
+				// TODO: Add form submission for correct socket event
+				return false;
+			});
 		});
 	</script>
 
